Refactor models and logging service to support nullable properties and improve logging functionality

--- a/EventEaseApp/Components/Pages/EventList.razor
+++ b/EventEaseApp/Components/Pages/EventList.razor
@@ -5,7 +5,7 @@
 @using EventEaseApp.Logging
 @rendermode InteractiveServer
 @inject NavigationManager Navigation
-@inject ILoggingService LoggingService // Inject the logging service
+@inject ILoggingService LoggingService
 
 @code {
     private int currentPage = 1;
